<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_article"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" />

    <!--region / Menu dzikir dan doa-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dashboard_menu"
            android:padding="16dp">


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/kumpulan_doa_dzikir"
                android:textColor="@color/blue_gray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:columnCount="2"
                android:rowCount="1">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_qauliyah_shalat"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_row="0"
                    android:layout_rowWeight="0"
                    android:layout_column="0"
                    android:layout_columnWeight="0"
                    android:layout_margin="10dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_orang_lagi_do_a"
                            android:src="@drawable/ic_doa" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/txt_menu_qauliyah_dizikir_doa"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_setiap_hari"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_row="0"
                    android:layout_rowWeight="0"
                    android:layout_column="1"
                    android:layout_columnWeight="0"
                    android:layout_margin="10dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_jam"
                            android:src="@drawable/ic_time" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/txt_dzikir_setiap_saat"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_harian"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_tasbih"
                            android:src="@drawable/ic_dzikir" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/txt_dzikir_dan_doa_harian"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_dzikir_pagi_petang"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_margin="10dp"
                    android:layout_marginVertical="5dp"
                    app:cardBackgroundColor="@color/gray"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="62dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:contentDescription="@string/txt_desc_pagi_petang"
                            android:src="@drawable/ic_pagi_petang" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="3dp"
                            android:gravity="center"
                            android:text="@string/txt_dzikir_pagi_petang"
                            android:textColor="@color/blue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </GridLayout>


        </RelativeLayout>
    </ScrollView>

    <!--    region end-->
</LinearLayout>