<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.DzikirHarianActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu"
        android:gravity="bottom"
        android:padding="14dp"
        android:text="@string/txt_dzikir_pagi_petang"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/blue"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_morning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/card_afternoon"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_chainStyle="packed">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img_dzikir_pagi"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_morning"
                app:layout_constraintTop_toBottomOf="@id/dzikir_pagi" />

            <TextView
                android:id="@+id/dzikir_pagi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_2"
                android:paddingVertical="8dp"
                android:paddingStart="18dp"
                android:text="@string/txt_dzikir_pagi"
                android:textColor="@color/blue_gray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/img_btn_dzikir_pagi"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:background="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/txt_desc_button_with_icon_for_navigate_to_next_page"
                android:src="@drawable/bg_button_pagi_petang"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_afternoon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/card_morning">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img_dzikir_pagi"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_evening"
                app:layout_constraintTop_toBottomOf="@id/dzikir_petang" />

            <TextView
                android:id="@+id/dzikir_petang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_2"
                android:paddingVertical="8dp"
                android:paddingStart="18dp"
                android:text="@string/txt_dzikir_petang"
                android:textColor="@color/blue_gray"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/img_btn_dzikir_petang"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:background="@color/white"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/txt_desc_button_with_icon_for_navigate_to_next_page"
                android:src="@drawable/bg_button_pagi_petang"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>